# FileDock

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
apps/desktop/: README.md  index.html  package-lock.json  package.json  vite.config.ts
apps/desktop/src/: main.tsx
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/binaries/: README.md
apps/desktop/src-tauri/capabilities/: main.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/ui/: App.tsx  commandBus.ts  styles.css
apps/desktop/src/ui/api/: client.test.ts  client.ts  dialog.ts  tauri.ts
apps/desktop/src/ui/components/: AgentOnboardingModal.tsx  CommandPalette.tsx  ErrorBoundary.tsx  Icon.tsx  NoticeCenter.tsx  WorkspaceView.tsx
apps/desktop/src/ui/components/layout/: LeafPane.tsx  SplitNodeView.tsx
apps/desktop/src/ui/components/panes/: PaneView.tsx  usePaneTableColumns.test.ts  usePaneTableColumns.ts
apps/desktop/src/ui/components/panes/device/: DeviceBrowserPane.tsx
apps/desktop/src/ui/components/panes/local/: LocalBrowserPane.tsx
apps/desktop/src/ui/components/panes/notes/: NotesPane.tsx
apps/desktop/src/ui/components/panes/sftp/: SftpBrowserPane.tsx
apps/desktop/src/ui/components/panes/terminal/: TerminalPane.tsx
apps/desktop/src/ui/components/panes/transfer/: TransferQueuePane.tsx
apps/desktop/src/ui/i18n/: index.ts
apps/desktop/src/ui/i18n/locales/: en.json  zh-CN.json
apps/desktop/src/ui/model/: agentOnboarding.test.ts  agentOnboarding.ts  layout.ts  presetUtils.test.ts  presetUtils.ts  settings.test.ts  settings.ts  state.ts  storage.ts  terminalPresets.test.ts  terminalPresets.ts  transfers.ts
apps/desktop/src/ui/theme/: aliases.css  applyTheme.ts  tokens.css
apps/desktop/src/ui/util/: chunking.ts  formatBytes.test.ts  formatBytes.ts  tauriEnv.ts
apps/tui/: Cargo.toml  README.md
apps/tui/src/: main.rs
crates/client_cli/: Cargo.toml
crates/client_cli/src/: main.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
deploy/: Dockerfile  agent-config.example.toml  docker-compose.minio.yml  docker-compose.yml
deploy/launchd/: com.filedock.backup.plist
deploy/systemd/: example.env  filedock-agent@.service  filedock-backup@.service  filedock-backup@.timer
deploy/windows/: backup.ps1
docs/: acceptance.md  agent-onboarding.md  agent-scheduling-m2.md  agent.md  api.md  architecture.md  build.md  data-model.md  deploy.md  desktop.md  development.md  gc.md  plugins.md  protocol.md  quickstart.md  release.md  retention.md  roadmap.md  security.md  setup-github-access.md  sftp.md  storage.md  verify.md
plugins/examples/: filedock-notify
plugins/sftp/: go.mod  go.sum  main.go
plugins/ssh/: go.mod  main.go  resize_unix.go  resize_windows.go
progress/: 2026-01-31.md  2026-02-01.md  2026-02-03.md  2026-02-04.md  2026-02-08.md  2026-03-03.md  2026-03-06.md  2026-03-07.md  2026-03-08.md  2026-03-09.md  2026-03-10.md  2026-03-11.md
scripts/: README.md  agent.sh  bootstrap.sh  build-desktop-sidecars.sh  build-plugins.sh  build.sh  check.sh  dev.sh  docker-up.sh  fmt.sh  gc.sh  lint.sh  prune.sh  release.sh  smoke.sh
