[package]
name = "filedock-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
crossterm = "0.27"
ratatui = "0.26"
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1", features = ["rt", "time", "net", "io-util"] }

filedock-protocol = { path = "../../crates/protocol" }
