[package]
name = "filedock"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
blake3 = "1"
bytes = "1"
walkdir = "2"

filedock-protocol = { path = "../protocol" }
