[package]
name = "filedock"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "signal", "time", "process", "io-util"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
blake3 = "1"
bytes = "1"
walkdir = "2"
rand = "0.8"
futures-util = "0.3"
globset = "0.4"

filedock-protocol = { path = "../protocol" }
