[package]
name = "filedock-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
qrcode = "0.14"

filedock-protocol = { path = "../protocol" }
filedock-storage = { path = "../storage" }
bytes = "1"
uuid = { version = "1", features = ["v4"] }
blake3 = "1"
futures-util = "0.3"
time = { version = "0.3", features = ["std"] }
