[package]
name = "filedock-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
bytes = "1"
thiserror = "1"
tokio = { version = "1", features = ["fs"] }
aws-config = "1"
aws-sdk-s3 = "1"
aws-types = "1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt"] }
