[package]
name = "filedock-desktop"
version = "0.1.0"
description = "FileDock Desktop"
authors = ["FileDock"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "~2.5.3", features = [] }

[dependencies]
tauri = { version = "~2.9.5", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.6.0"
tokio = { version = "1", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
futures-util = "0.3"
filedock-protocol = { path = "../../../crates/protocol" }
urlencoding = "2"
rand = "0.8"
blake3 = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
